tests/error/effects_errors/pure_calls_impure_callable.err
Error: Too many effects (at $FILE:5:10)
  | 
3 | @guppy(max_effects=[])
4 | def main(impure_f: Callable[[int], int]) -> int:
5 |    return impure_f(5)
  |           ^^^^^^^^ Callee of type `int -> int` has effects <UNKNOWN>
  |                    that exceed the allowed effects `[]`

Guppy compilation failed due to 1 previous error
